[fix] Batch denormalization: Add RTP and taxon weight (indirect and elevate)